fixing ctrl flow

--- a/P1/fake-user-commented.html
+++ b/P1/fake-user-commented.html
@@ -62,15 +62,10 @@
                 <p>Bob was a terrific guest, he even taught me how to paint!</p>
                 <p class="comment-date">July 9, 2021</p>
               </div>
-              <div class="profile-comment-edit">
-                <a href="profile.html"><h6>Edward Cullen</h6></a>
-                <form>
-                    <textarea id="content">Bob was a terrific guest, he even taught me how to paint!</textarea>
-                    <div class="row">
-                        <a type="button" href="fake-user-commented.html" class="btn btn-primary">Post</a>
-                        <a type="button" href="fake-user-comment-cancelled.html" class="btn btn-danger">Cancel</a>
-                    </div>
-                </form>
+              <div class="profile-comment">
+                <a href="#"><h6>Edward Cullen</h6></a>
+                <p>Bob was a terrific guest, he even taught me how to paint!</p>
+                <p class="comment-date">February 4, 2023</p>
               </div>
             </div>
           </div>
