--- a/P1/host-property-1-custom-datetime.html
+++ b/P1/host-property-1-custom-datetime.html
@@ -182,7 +182,10 @@
                   <div id="request-existing">
                     <h6>Existing Changes</h6>
                     <ul class="list-group ">
-                      
+                      <li class="list-group-item d-flex justify-content-between align-items-center p-1 border-0" id="custom-existing-change">
+                        12-05-2023 to 12-09-2023, unavailable
+                        <button class="btn p-0" type="button"><i class="bi bi-trash"></i></button>
+                      </li>
                     </ul>
                   </div>
                   <div id="request-custom">
@@ -206,7 +209,7 @@
                         <label for="rate">Rate ($/night)</label>
                         <input type="text" class="form-control short-input" id="rate">
                       </div>
-                      <a href="host-property-1-custom-datetime.html" type="submit" class="btn btn-light submit-btn">Update</a>
+                      <button type="submit" class="btn btn-light submit-btn">Update</button>
                     </form>
                   </div>
                 </div>
