--- a/P1/add-new-property.html
+++ b/P1/add-new-property.html
@@ -10,7 +10,7 @@
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
       <link rel="stylesheet" href="style.css">
 
-      <script src="sidebar.js"></script>
+      <script src="property.js"></script>
   </head>
   <body>
     <header> 
@@ -132,7 +132,8 @@
                     <ul class="list-group ">
                       <li class="list-group-item d-flex justify-content-center align-items-center bg-light" id="photo-order">
                         <label class="custom-file-upload">
-                          <input type="file" href="manage-properties.html"/>
+                          <input type="file" href="manage-properties.html"
+                          onclick="showCarousel()"/>
                           <i class="bi bi-plus"></i>
                         </label>
                       </li>
@@ -140,20 +141,22 @@
                   </div>
                   <div>
                     <h5>Display</h5>
-                    <div id="carouselExampleFade" class="carousel slide carousel-fade carousel-appears">
-                      <div class="carousel-inner">
-                        <div class="carousel-item active">
-                          <img src="images/cullen_kitchen.jpg" class="d-block w-100">
+                    <div id="hide-me">
+                      <div id="carouselExampleFade" class="carousel slide carousel-fade">
+                        <div class="carousel-inner">
+                          <div class="carousel-item active">
+                            <img src="images/cullen_kitchen.jpg" class="d-block w-100">
+                          </div>
                         </div>
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+                          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                          <span class="visually-hidden">Previous</span>
+                        </button>
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+                          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                          <span class="visually-hidden">Next</span>
+                        </button>
                       </div>
-                      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Previous</span>
-                      </button>
-                      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Next</span>
-                      </button>
                     </div>
                   </div>
                 </div>
