--- a/P1/host-property-created.html
+++ b/P1/host-property-created.html
@@ -10,7 +10,7 @@
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
       <link rel="stylesheet" href="style.css">
 
-      <script src="sidebar.js"></script>
+      <script src="property.js"></script>
   </head>
   <body>
     <header> 
@@ -136,6 +136,10 @@
                             <input type="file" href="manage-properties.html"/>
                             <i class="bi bi-plus"></i>
                           </label>
+                          <li class="list-group-item d-flex justify-content-between align-items-center" id="photo-order">
+                            interior.jpg
+                            <input class="short-input form-control" type="number" required value="1">
+                          </li>
                         </li>
                       </ul>
                     </div>
