--- a/P1/manage-properties.html
+++ b/P1/manage-properties.html
@@ -10,7 +10,7 @@
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
       <link rel="stylesheet" href="style.css">
 
-      <script src="sidebar.js"></script>
+      <script src="property.js"></script>
   </head>
   <body>
     <header> 
@@ -153,7 +153,7 @@
                   </div>
                   <div>
                     <h5>Display</h5>
-                    <div id="carouselExampleFade" class="carousel slide carousel-fade ">
+                    <div id="carouselExampleFade" class="carousel slide carousel-fade">
                       <div class="carousel-inner">
                         <div class="carousel-item active">
                           <img src="images/cabin.jpg" class="d-block w-100">
