--- a/P1/no-reservations.html
+++ b/P1/no-reservations.html
@@ -49,18 +49,17 @@
         <h1 class="m-5">
             Reservations
         </h1>
-        <div class="no-reservations border container m-5">
-            <div class="row">
-                <div class="col margin-auto">
-                    <h3 class="mb-4">No reservations yet!</h3>
-                    <a class="btn btn-primary p-2" href="logged-in.html">
-                        Start searching
-                    </a>
-                </div>
-                <div class="col-9 p-0">
-                    <img src="images/trip.jpg" id="no-reservation-img" alt="car going on road trip">
-                </div>
-            </div>
+        <div class="no-reservations border container m-5 d-flex flex-row justify-content-between p-0">
+          <div class="d-flex flex-column justify-content-center m-2">
+            <h3 class="mb-4">No reservations yet!</h3>
+            <a class="btn btn-primary p-2" href="logged-in.html">
+                Start searching
+            </a>
+        </div>
+        <div class="col-9 p-0">
+            <img src="images/trip.jpg" id="no-reservation-img" alt="car going on road trip">
+        </div>
+      
         </div>
         <h3 class="ms-5 mb-3">
           Past reservations
