--- a/P1/property-loggedin.html
+++ b/P1/property-loggedin.html
@@ -65,7 +65,7 @@
             </div>
           </div>
         </div>
-        <div class="container ms-0 mt-5 p-0">
+        <div class="container ms-0 mt-5 p-0 property-details">
           <div class="row">
             <div class="col-8 p-0">
               <div class="container border-bottom pb-2 pe-2">
