--- a/P1/reservation-details.html
+++ b/P1/reservation-details.html
@@ -66,7 +66,7 @@
             </div>
           </div>
         </div>
-        <div class="container ms-0 mt-5 p-0">
+        <div class="container ms-0 mt-5 p-0 property-details">
           <div class="row">
             <div class="col-8 p-0">
               <div class="container border-bottom pb-2 pe-2">
@@ -215,7 +215,7 @@
                 <input type="text"placeholder="7 guests" class="form-control shadow-none" id="book-input-bottom" disabled>
               </div>
               
-              <a href="canceled-reservation.html" class="btn btn-secondary mt-3">
+              <a href="canceled-reservation.html" class="btn btn-secondary mt-3 mb-3">
                 Cancel reservation
               </a>
             </div>
