--- a/P1/reservations.html
+++ b/P1/reservations.html
@@ -52,7 +52,7 @@
         <div class="card m-5">
             <img class="card-img-top" src="images/Edwards-House.jpg" alt="Edward's house">
             <div class="card-body">
-              <span class="badge text-bg-secondary">Pending</span>
+              <span class="badge text-bg-warning">Pending</span>
                 <h5 class="card-title">Forks, Washington, US</h5>
                 <p class="card-text">4347 km away</p>
                 <p class="card-text">Feb. 10-18</p>
