--- a/P1/logged-in.html
+++ b/P1/logged-in.html
@@ -33,20 +33,20 @@
                       <i class="bi bi-bell-fill m-1 w-150 fs-3"></i>
                     </a>
                   <ul class="dropdown-menu dropdown-menu-end me-1">
-                    <li><span class="dropdown-item-text">Bob Ross commented on your listing of <a class="link-dark" href="reservation-details.html">Private isolated mansion</a> <span class="badge text-bg-primary">New</span></span></li>
+                    <li><span class="dropdown-item-text">Bob Ross commented on your listing of <a class="link-dark" href="property-loggedin.html">Private isolated mansion</a> <span class="badge text-bg-primary">New</span></span></li>
                     <li><hr class="dropdown-divider"></li>
-                    <li><span class="dropdown-item-text">Bob Ross rated your listing of <a class="link-dark" href="reservation-details.html">Private isolated mansion</a>  <span class="badge text-bg-primary">New</span></span></li>
+                    <li><span class="dropdown-item-text">Bob Ross rated your listing of <a class="link-dark" href="property-loggedin.html">Private isolated mansion</a>  <span class="badge text-bg-primary">New</span></span></li>
                     <li><hr class="dropdown-divider"></li>
-                    <li><span class="dropdown-item-text">Bob Ross requested approval on your listing of <a class="link-dark" href="reservation-details.html">Private isolated mansion</a></span></li>
+                    <li><span class="dropdown-item-text">Bob Ross requested approval on your listing of <a class="link-dark" href="property-loggedin.html">Private isolated mansion</a></span></li>
                   </ul>
                 </div> 
                 </a>
               <ul class="dropdown-menu dropdown-menu-end me-1">
-                <li><span class="dropdown-item-text">Bob Ross commented on your listing of <a class="link-dark" href="reservation-details.html">Private isolated mansion</a> <span class="badge text-bg-primary">New</span></span></li>
+                <li><span class="dropdown-item-text">Bob Ross commented on your listing of <a class="link-dark" href="property-loggedin.html">Private isolated mansion</a> <span class="badge text-bg-primary">New</span></span></li>
                 <li><hr class="dropdown-divider"></li>
-                <li><span class="dropdown-item-text">Bob Ross rated your listing of <a class="link-dark" href="reservation-details.html">Private isolated mansion</a>  <span class="badge text-bg-primary">New</span></span></li>
+                <li><span class="dropdown-item-text">Bob Ross rated your listing of <a class="link-dark" href="property-loggedin.html">Private isolated mansion</a>  <span class="badge text-bg-primary">New</span></span></li>
                 <li><hr class="dropdown-divider"></li>
-                <li><span class="dropdown-item-text">Bob Ross requested approval on your listing of <a class="link-dark" href="reservation-details.html">Private isolated mansion</a></span></li>
+                <li><span class="dropdown-item-text">Bob Ross requested approval on your listing of <a class="link-dark" href="property-loggedin.html">Private isolated mansion</a></span></li>
               </ul>
             </div> 
               
