--- a/P1/index.html
+++ b/P1/index.html
@@ -151,8 +151,29 @@
                 <h5 class="card-title">Forks, Washington, US</h5>
                 <p class="card-text">4347 km away</p>
                 <p class="card-text">Feb. 10-18</p>
-                <p class="card-text font-weight-bold">$400 CAD/night</p>
+                <p class="card-text font-weight-bold">$1000 CAD/night</p>
                 <a href="property.html" class="btn btn-primary mt-1">View more</a>
+            </div>
+          </div>
+          
+          <div class="card">
+            <img class="card-img-top" src="images/cabin.jpg" alt="Wooden cabin">
+            <div class="card-body">
+                <h5 class="card-title">Tobermory, Ontario, CA</h5>
+                <p class="card-text">286 km away</p>
+                <p class="card-text">Apr. 20-25</p>
+                <p class="card-text font-weight-bold">$553 CAD/night</p>
+                <a href="#" class="btn btn-primary mt-1">View more</a>
+            </div>
+          </div>
+          <div class="card">
+            <img class="card-img-top" src="images/tiny-home.jpg" alt="Tiny home">
+            <div class="card-body">
+              <h5 class="card-title">Maynooth, Ontario, CA</h5>
+              <p class="card-text">212 km away</p>
+              <p class="card-text">Jun. 03-09</p>
+              <p class="card-text font-weight-bold">$103 CAD/night</p>
+              <a href="#" class="btn btn-primary mt-1">View more</a>
             </div>
           </div>
           <div class="card">
@@ -166,62 +187,42 @@
             </div>
           </div>
           <div class="card">
-            <img class="card-img-top" src="images/cabin.jpg" alt="Wooden cabin">
+            <img class="card-img-top" src="images/yellow-house.jpg" alt="Small yellow house">
             <div class="card-body">
-                <h5 class="card-title">Forks, Washington, US</h5>
-                <p class="card-text">4347 km away</p>
-                <p class="card-text">Feb. 10-18</p>
-                <p class="card-text font-weight-bold">$400 CAD/night</p>
-                <a href="#" class="btn btn-primary mt-1">View more</a>
+              <h5 class="card-title">Highland, New York, US</h5>
+              <p class="card-text">488 km away</p>
+              <p class="card-text">Feb. 24-28</p>
+              <p class="card-text font-weight-bold">$230 CAD/night</p>
+              <a href="#" class="btn btn-primary mt-1">View more</a>
             </div>
           </div>
           <div class="card">
-            <img class="card-img-top" src="images/cabin.jpg" alt="Wooden cabin">
+            <img class="card-img-top" src="images/round-house.jpg" alt="Round wooden cabin">
             <div class="card-body">
-              <h5 class="card-title">Forks, Washington, US</h5>
-              <p class="card-text">4347 km away</p>
-              <p class="card-text">Feb. 10-18</p>
+              <h5 class="card-title">Rageley, Maine, US</h5>
+              <p class="card-text">713 km away</p>
+              <p class="card-text">May 15-18</p>
+              <p class="card-text font-weight-bold">$342 CAD/night</p>
+              <a href="#" class="btn btn-primary mt-1">View more</a>
+            </div>
+          </div>
+          <div class="card">
+            <img class="card-img-top" src="images/white-cabin.jpg" alt="White cabin">
+            <div class="card-body">
+              <h5 class="card-title">Austin, Texas, US</h5>
+              <p class="card-text">2196 km away</p>
+              <p class="card-text">Jun. 12-14</p>
               <p class="card-text font-weight-bold">$400 CAD/night</p>
               <a href="#" class="btn btn-primary mt-1">View more</a>
             </div>
           </div>
           <div class="card">
-            <img class="card-img-top" src="images/cabin.jpg" alt="Wooden cabin">
+            <img class="card-img-top" src="images/winter-house.jpg" alt="Modern winter retreat">
             <div class="card-body">
-              <h5 class="card-title">Forks, Washington, US</h5>
-              <p class="card-text">4347 km away</p>
-              <p class="card-text">Feb. 10-18</p>
-              <p class="card-text font-weight-bold">$400 CAD/night</p>
-              <a href="#" class="btn btn-primary mt-1">View more</a>
-            </div>
-          </div>
-          <div class="card">
-            <img class="card-img-top" src="images/cabin.jpg" alt="Wooden cabin">
-            <div class="card-body">
-              <h5 class="card-title">Forks, Washington, US</h5>
-              <p class="card-text">4347 km away</p>
-              <p class="card-text">Feb. 10-18</p>
-              <p class="card-text font-weight-bold">$400 CAD/night</p>
-              <a href="#" class="btn btn-primary mt-1">View more</a>
-            </div>
-          </div>
-          <div class="card">
-            <img class="card-img-top" src="images/cabin.jpg" alt="Wooden cabin">
-            <div class="card-body">
-              <h5 class="card-title">Forks, Washington, US</h5>
-              <p class="card-text">4347 km away</p>
-              <p class="card-text">Feb. 10-18</p>
-              <p class="card-text font-weight-bold">$400 CAD/night</p>
-              <a href="#" class="btn btn-primary mt-1">View more</a>
-            </div>
-          </div>
-          <div class="card">
-            <img class="card-img-top" src="images/cabin.jpg" alt="Wooden cabin">
-            <div class="card-body">
-              <h5 class="card-title">Forks, Washington, US</h5>
-              <p class="card-text">4347 km away</p>
-              <p class="card-text">Feb. 10-18</p>
-              <p class="card-text font-weight-bold">$400 CAD/night</p>
+              <h5 class="card-title">Shaw, Quebec, CA</h5>
+              <p class="card-text">622 km away</p>
+              <p class="card-text">Feb. 19-23</p>
+              <p class="card-text font-weight-bold">$872 CAD/night</p>
               <a href="#" class="btn btn-primary mt-1">View more</a>
             </div>
           </div>
