logged in search

--- a/P1/logged-in-search.html
+++ b/P1/logged-in-search.html
@@ -23,7 +23,7 @@
               <input type="text" placeholder="Check In" onblur="(this.type='text')" onfocus="(this.type='date')" class="form-control shadow-none border-0">
               <input type="text" placeholder="Check Out" onblur="(this.type='text')" onfocus="(this.type='date')" class="form-control shadow-none border-0">
               <input type="number" step="1" placeholder="Add Guests" class="form-control shadow-none border-0">
-              <div><a href="logged-in-search.html" class="btn btn-primary m-1 rounded-circle" type="submit"><i class="bi bi-search"></i></a></div>
+              <div><button href="logged-in-search.html"class="btn btn-primary m-1 rounded-circle" type="submit"><i class="bi bi-search"></i></button></div>
             </div>
             <div class="d-flex align-items-center">
               <div class="dropdown">
@@ -182,27 +182,6 @@
             <a href="property.html" class="btn btn-primary mt-1">View more</a>
         </div>
       </div>
-      
-      <div class="card">
-        <img class="card-img-top" src="images/cabin.jpg" alt="Wooden cabin">
-        <div class="card-body">
-            <h5 class="card-title">Tobermory, Ontario, CA</h5>
-            <p class="card-text">286 km away</p>
-            <p class="card-text">Apr. 20-25</p>
-            <p class="card-text font-weight-bold">$553 CAD/night</p>
-            <a href="#" class="btn btn-primary mt-1">View more</a>
-        </div>
-      </div>
-      <div class="card">
-        <img class="card-img-top" src="images/tiny-home.jpg" alt="Tiny home">
-        <div class="card-body">
-          <h5 class="card-title">Maynooth, Ontario, CA</h5>
-          <p class="card-text">212 km away</p>
-          <p class="card-text">Jun. 03-09</p>
-          <p class="card-text font-weight-bold">$103 CAD/night</p>
-          <a href="#" class="btn btn-primary mt-1">View more</a>
-        </div>
-      </div>
       <div class="card">
         <img class="card-img-top" src="images/bellas-house.jpeg" alt="Bella's house">
         <div class="card-body">
@@ -212,47 +191,7 @@
             <p class="card-text font-weight-bold">$200 CAD/night</p>
             <a href="#" class="btn btn-primary mt-1">View more</a>
         </div>
-      </div>
-      <div class="card">
-        <img class="card-img-top" src="images/yellow-house.jpg" alt="Small yellow house">
-        <div class="card-body">
-          <h5 class="card-title">Highland, New York, US</h5>
-          <p class="card-text">488 km away</p>
-          <p class="card-text">Feb. 24-28</p>
-          <p class="card-text font-weight-bold">$230 CAD/night</p>
-          <a href="#" class="btn btn-primary mt-1">View more</a>
-        </div>
-      </div>
-      <div class="card">
-        <img class="card-img-top" src="images/round-house.jpg" alt="Round wooden cabin">
-        <div class="card-body">
-          <h5 class="card-title">Rageley, Maine, US</h5>
-          <p class="card-text">713 km away</p>
-          <p class="card-text">May 15-18</p>
-          <p class="card-text font-weight-bold">$342 CAD/night</p>
-          <a href="#" class="btn btn-primary mt-1">View more</a>
-        </div>
-      </div>
-      <div class="card">
-        <img class="card-img-top" src="images/white-cabin.jpg" alt="White cabin">
-        <div class="card-body">
-          <h5 class="card-title">Austin, Texas, US</h5>
-          <p class="card-text">2196 km away</p>
-          <p class="card-text">Jun. 12-14</p>
-          <p class="card-text font-weight-bold">$400 CAD/night</p>
-          <a href="#" class="btn btn-primary mt-1">View more</a>
-        </div>
-      </div>
-      <div class="card">
-        <img class="card-img-top" src="images/winter-house.jpg" alt="Modern winter retreat">
-        <div class="card-body">
-          <h5 class="card-title">Shaw, Quebec, CA</h5>
-          <p class="card-text">622 km away</p>
-          <p class="card-text">Feb. 19-23</p>
-          <p class="card-text font-weight-bold">$872 CAD/night</p>
-          <a href="#" class="btn btn-primary mt-1">View more</a>
-        </div>
-      </div>
+    </div>
     </div>
   </main>
   </body>
