--- a/P1/no-reservations.html
+++ b/P1/no-reservations.html
@@ -19,11 +19,14 @@
                   <a class="navbar-brand" href="logged-in.html">Restify</a>
                 </div>
                 <div class="shadow-sm search-filter bg-white d-flex align-items-center p-1">
-                  <input type="text" placeholder="Location" class="form-control shadow-none border-0">
-                  <input type="text" placeholder="Check In" onblur="(this.type='text')" onfocus="(this.type='date')" class="form-control shadow-none border-0">
-                  <input type="text" placeholder="Check Out" onblur="(this.type='text')" onfocus="(this.type='date')" class="form-control shadow-none border-0">
-                  <input type="number" step="1" placeholder="Add Guests" class="form-control shadow-none border-0">
-                  <div><a href="logged-in.html" class="btn btn-primary m-1 rounded-circle" type="submit"><i class="bi bi-search"></i></a></div>
+                  <input type="text" placeholder="Location" class="form-control shadow-none border-0 large-search">
+                  <input type="text" placeholder="Check In" onblur="(this.type='text')" onfocus="(this.type='date')" class="form-control shadow-none border-0 large-search">
+                  <input type="text" placeholder="Check Out" onblur="(this.type='text')" onfocus="(this.type='date')" class="form-control shadow-none border-0 large-search">
+                  <input type="number" step="1" placeholder="Add Guests" class="form-control shadow-none border-0 large-search">
+
+                  <input type="text" placeholder="Search..." class="form-control shadow-none border-0 small-search">
+    
+                  <div><a href="logged-in.html" class="btn btn-primary m-1 rounded-circle search-button" type="submit"><i class="bi bi-search"></i></a></div>
                 </div>
                 <div class="d-flex align-items-center">
                     <i class="bi bi-bell-fill m-1 w-150 fs-3"></i>
