--- a/P1/no-reservations.html
+++ b/P1/no-reservations.html
@@ -43,8 +43,7 @@
                         <input type="number" step="1" placeholder="Add Guests" class="form-control shadow-none ">
                         </div>
                         <div class="modal-footer">
-    
-                          <button type="button" class="btn btn-primary">Search</button>
+                          <button type="button" onclick="location.href='logged-in-search.html'"  class="btn btn-primary">Search</button>
                         </div>
                       </div>
                     </div>
