--- a/P1/editable-profile.html
+++ b/P1/editable-profile.html
@@ -53,8 +53,8 @@
       <main>
           <div class="profile">
             <div class="card-group cards-profile">
-              <div class="card border-0 profile-card">
-                <div class="card-body profile-body">
+              <div class="card border-0 profile-card profile-image">
+                <div class="card-body profile-body ">
                   <img src="images/edwards.png" id="me" class="img-fluid d-block" alt="Avatar"> 
                 </div>
               </div>
