--- a/P1/fake-user-comment-cancelled.html
+++ b/P1/fake-user-comment-cancelled.html
@@ -51,7 +51,7 @@
     </header>
     <div class="page">
       <main>
-          <div id="profile" class="profile">
+          <div class="profile">
             <div class="card-group cards-profile">
               <div class="card border-0 profile-card profile-image">
                 <div class="card-body profile-body ">
