--- a/P1/manage-properties.html
+++ b/P1/manage-properties.html
@@ -46,7 +46,7 @@
                   <li><hr class="dropdown-divider"></li>
                   <li><a class="dropdown-item" href="signed-out.html">Log Out</a></li>
                 </ul>
-              </div> 
+              </div>  
               </div>
             </div>
         </nav>
@@ -56,10 +56,11 @@
             <div class="property-mgr-wrapper">
               <div id="collapse-sidebar">
                 <div id="sidebar-header">
-                  <a class="btn btn-primary" data-bs-toggle="collapse" data-bs-target="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+                  <a class="btn btn-primary" data-bs-toggle="collapse" data-bs-target="#collapseExample" 
+                  role="button" aria-expanded="false" aria-controls="collapseExample" onclick="collapseSidebarHeader()">
                     <i class="bi bi-list"></i>
                   </a>
-                  <div class="collapse properties-mgr-title" id="collapseExample"><h5>Properties</h5></div>
+                  <div id="properties-mgr-title"><h5>Properties</h5></div>
                 </div>
                 <div class="collapse full-collapse-list" id="collapseExample">
                   <div class="list-group">
