--- a/P1/host-property-1-custom-datetime.html
+++ b/P1/host-property-1-custom-datetime.html
@@ -56,10 +56,13 @@
             <div class="property-mgr-wrapper">
               <div id="collapse-sidebar">
                 <div id="sidebar-header">
-                  <button class="btn btn-primary" onclick="collapseNav()" id="collapsebtn"><i class="bi bi-list"></i></button>
+                  <a class="btn btn-primary" data-bs-toggle="collapse" data-bs-target="#collapseExample" 
+                  role="button" aria-expanded="false" aria-controls="collapseExample" onclick="collapseSidebarHeader()">
+                    <i class="bi bi-list"></i>
+                  </a>
                   <div id="properties-mgr-title"><h5>Properties</h5></div>
                 </div>
-                <div id="full-collapse-list">
+                <div class="collapse full-collapse-list" id="collapseExample">
                   <div class="list-group">
                       <a href="add-new-property.html" class="list-group-item list-group-item-action">
                         <i class="bi bi-plus"></i>
