fixed the dropdown link

--- a/P1/editable-profile.html
+++ b/P1/editable-profile.html
@@ -36,7 +36,7 @@
                   <i class="bi bi-person-fill m-4 w-150 fs-3"></i>
                 </a>
               <ul class="dropdown-menu dropdown-menu-end me-1">
-                <li><a class="dropdown-item" href="manage-properties.html">My Properties</a></li>
+                <li><a class="dropdown-item" href="add-new-property.html">My Properties</a></li>
                   <li><hr class="dropdown-divider"></li>
                   <li><a class="dropdown-item" href="no-reservations.html">My Reservations</a></li>
                   <li><hr class="dropdown-divider"></li>
