--- a/P1/no-reservations.html
+++ b/P1/no-reservations.html
@@ -37,19 +37,19 @@
                           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                         </div>
                         <div class="modal-body">
-                          <input type="text" placeholder="Location" class="form-control shadow-none ">
-                          <input type="text" placeholder="Check In" onblur="(this.type='text')" onfocus="(this.type='date')" class="form-control shadow-none ">
-                          <input type="text" placeholder="Check Out" onblur="(this.type='text')" onfocus="(this.type='date')" class="form-control shadow-none ">
-                        <input type="number" step="1" placeholder="Add Guests" class="form-control shadow-none ">
+                          <input type="text" placeholder="Location" class="form-control shadow-none mb-1">
+                          <input type="text" placeholder="Check In" onblur="(this.type='text')" onfocus="(this.type='date')" class="form-control shadow-none mb-1">
+                          <input type="text" placeholder="Check Out" onblur="(this.type='text')" onfocus="(this.type='date')" class="form-control shadow-none mb-1">
+                        <input type="number" step="1" placeholder="Add Guests" class="form-control shadow-none mb-1">
                         </div>
                         <div class="modal-footer">
-                          <button type="button" onclick="location.href='logged-in-search.html'"  class="btn btn-primary">Search</button>
+                          <button type="button" onclick="location.href='logged-in-search.html'"  class="btn btn-primary ">Search</button>
                         </div>
                       </div>
                     </div>
                   </div>
     
-                  <div><a href="logged-in.html" class="btn btn-primary m-1 rounded-circle search-button" type="submit"><i class="bi bi-search"></i></a></div>
+                  <div><a href="logged-in-search.html" class="btn btn-primary m-1 rounded-circle search-button" type="submit"><i class="bi bi-search"></i></a></div>
                 </div>
                 <div class="d-flex align-items-center">
                     <i class="bi bi-bell-fill m-1 w-150 fs-3"></i>
@@ -78,7 +78,7 @@
         <div class="no-reservations border container m-5 d-flex flex-row justify-content-between p-0">
           <div class="d-flex flex-column justify-content-center m-2">
             <h3 class="mb-4">No reservations yet!</h3>
-            <a class="btn btn-primary p-2" href="logged-in.html">
+            <a class="btn btn-primary p-2" href="property-loggedin.html">
                 Start searching
             </a>
         </div>
