--- a/P1/no-reservations.html
+++ b/P1/no-reservations.html
@@ -78,7 +78,7 @@
         <div class="no-reservations border container m-5 d-flex flex-row justify-content-between p-0">
           <div class="d-flex flex-column justify-content-center m-2">
             <h3 class="mb-4">No reservations yet!</h3>
-            <a class="btn btn-primary p-2" href="property-loggedin.html">
+            <a class="btn btn-primary p-2" href="logged-in.html">
                 Start searching
             </a>
         </div>
